appId: com.alnim.kikoro.debug
---
- launchApp:
    clearState: true
- runFlow: flows/launch.yaml
- takeScreenshot: app-launched
- swipe:
    direction: RIGHT
    duration: 300
- assertVisible: "Settings"
- tapOn: "Settings"
